Archive2/13/32e4c9e6348b54/output
main.cpp:6:21: warning: expression with side effects has no effect in an unevaluated context [-Wunevaluated-expression]
        PrintType<decltype(throw "error")> a; 
                           ^
main.cpp:6:37: error: implicit instantiation of undefined template 'PrintType<void>'
        PrintType<decltype(throw "error")> a; 
                                           ^
main.cpp:2:8: note: template is declared here
struct PrintType;
       ^
1 warning and 1 error generated.
